Eclipse Kura - 4.1.2   - October 2020
-------------------------------------------------------------------------
Description:
Eclipse Kura 4.1.2 is a service release to address various discovered bugs and functional issues.


Changes:
  * Enhancements
    * Enhanced the modem support with Ublox LARA R2
    * Improved and uniformed the Web UI Response Headers

  * Bug fixes and cleanups
    * Fixed issue with possible stale threads left by Paho during reconnections
    * Fixed capitalization of cloud services, publishers and subscribers in the Cloud Connections view
    * Fixed issue with target selection in Web UI
    * Fixed issue with Assets cloudlet where a read for all channels could lead to an empty value
    * Fixed issue with Bluetooth flags capitalization
    * Fixed issue with AT context command for Quectel modem


Compatibility:
  * Eclipse Kura v4.1.2 does not introduce API breakage with previous releases.


Target Environments:
  * Kura is released as pre-compiled binary installers for the following platforms:
    * Raspberry Pi 2/3 based on Raspbian
    * Intel Up Squared board running Ubuntu 18  
    * Intel Up Squared board running Centos 7 (Experimental)
    * Rock960 ARM_64 running Ubuntu 16 (NN version only)
  * Kura is also available as a pre-built Docker container 


Bug Fixes :
  * Fixed github issues:
    * #3071: Stale threads related to Paho
    * #3068: Review/Update servlet response headers
    * #3044: Incorrect Asset status report from cloud call 
    * #3017: Issue while accessing properties in gatt characterstics
    * #2992: Quectel EG-25 context command is wrong
    * #2983: UI Target selection is not working in all cases

  * Merged no issue-related Pull Requests:
    * #3078: Capitalize cloudservice, publisher and subscriber names - Backport
    * #2991: Backport of #2957 to release-4.1.0  
    
    
Know Issues :
  * The implementation of the CryptoService performs encryption using a
    password that is hardcoded and published.